Fix date collapsing on Updates

--- a/jekyll/_sass/_layout.scss
+++ b/jekyll/_sass/_layout.scss
@@ -250,11 +250,34 @@ margin-top: 4px;
 /**
   * Microupdates ***********************************************************
 */
+
 .microupdates {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  .data {
-    padding-right: 1.4em;
+  font-size: $small-font-size;
+  color: $grey-color;
+  margin-bottom: 0px;
+  > table {
+    width: 100%;
+    margin-top: 1.2em;
+    margin-bottom: 1.2em;
+    border-collapse: collapse;
+    >tbody {
+      >tr {
+        // border: solid 0.5px  rgba(227, 227, 227, 0.1);
+        border-left: 0;
+        border-right: 0;
+        vertical-align: top;
+        .date {
+          white-space: nowrap;
+        }
+        .data-spacer {
+          padding-right: 0.6em;
+        }
+      }
+      >tr:first-child, >tr:last-child {
+        border: none;
+      }
+    }
+
   }
 }
 
